k8s-nextcloud/04-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: nextcloud
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      restartPolicy: Always
      containers:
      - name: redis
        image: redis:7.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 6379
        resources:
          requests:
            memory: 512Mi
            cpu: 300m
          limits:
            memory: 1024Mi
            cpu: 600m
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: nextcloud
spec:
  selector:
    app: redis
  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
