k8s-nextcloud/05-mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-deployment
  namespace: nextcloud
  labels:
    app: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      restartPolicy: Always
      containers:
      - name: mariadb
        image: mariadb:10.7.3
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 3306
        # resources:
        #   requests:
        #     memory: 512Mi
        #     cpu: 300m
        #   limits:
        #     memory: 1024Mi
        #     cpu: 600m
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: db-volume
          - mountPath: /root/backup
            name: db-backup-volume
      volumes:
        - name: db-volume
          persistentVolumeClaim:
            claimName: db-pvc
        - name: db-backup-volume
          persistentVolumeClaim:
            claimName: db-backup-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
  namespace: nextcloud
spec:
  selector:
    app: mariadb
  ports:
    - name: mariadb
      protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
