k8s-nextcloud/06-nextcloud.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-deployment
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      restartPolicy: Always
      containers:
      - name: nextcloud
        image: nextcloud:24.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
        # resources:
        #   requests:
        #     memory: 512Mi
        #     cpu: 300m
        #   limits:
        #     memory: 1024Mi
        #     cpu: 600m
        volumeMounts:
          - mountPath: /var/www/html/custom_apps
            name: nextcloud-volume
        volumeMounts:
          - mountPath: /var/www/html/config
            name: nextcloud-volume
        volumeMounts:
          - mountPath: /var/www/html/data
            name: nextcloud-volume
        volumeMounts:
          - mountPath: /var/www/html/themes
            name: nextcloud-volume
      volumes:
        - name: nextcloud-volume
          persistentVolumeClaim:
            claimName: nextcloud-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-service
  namespace: nextcloud
spec:
  selector:
    app: nextcloud
  ports:
    - name: nextcloud
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress
  namespace: nextcloud
spec:
  rules:
    - host: nextcloud.r0cc4rd0.rar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  nextcloud-service
                port:
                  number: 80
